user-daftar komik
desain utk view port kecil udah
Cuma kurang pemanis utk memunculkan tombol ketika scroll untuk link kembali keatas lagi

--- a/User/User - Daftar Komik/User - daftar komik.html
+++ b/User/User - Daftar Komik/User - daftar komik.html
@@ -104,5 +104,6 @@
             </div>
         </div>
     </article>
+    <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
 </body>
 </html>
