user - daftar komik
sudah ada tombol back to top jika discroll.
sepertinya sudah fix

--- a/User/User - Daftar Komik/User - daftar komik.html
+++ b/User/User - Daftar Komik/User - daftar komik.html
@@ -81,7 +81,7 @@
                 <p class="tersedia">Tersedia : 1</p>
                 <p class="status">Available</p>
             </div>
-            <div class="infoKomik">
+            <div class="infoKomik specialEdition">
                 <img class="komik" src="miiko19.jpg"/>
                 <h4 class="judul">Hai Miiko! Vol.19</h4>
                 <p class="stok">Stok : 5</p>
