--- a/template page/template.html
+++ b/template page/template.html
@@ -18,11 +18,25 @@
     </header>
     <article>
         <div id="aside">
-            
+            <div id="minimizeOption"> <!--Dipakai ketika media query utk ukuran smartphone-->
+                <h3><span><i class="fas fa-bars" style="color: white;"></i></span></h3>
+                <hr/>
+            </div>
+            <div id="option">
+                <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span> aside1</h3>
+                <hr/>
+                <h3 class="blue" id="aside2">aside2</h3>
+                <hr/>
+                <h3 class="blue" id="aside3">aside3</h3>
+                <hr/>
+                <h3 class="blue" id="aside4">aside4</h3>
+                <hr/>
+            </div>
         </div>
         <div id="konten">
-
+            <h1>Judul</h1>
         </div>
     </article>
+    <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
 </body>
 </html>
