--- a/kasir/Kasir - peminjaman/Kasir - peminjaman.html
+++ b/kasir/Kasir - peminjaman/Kasir - peminjaman.html
@@ -23,18 +23,34 @@
                 <hr/>
             </div>
             <div id="option">
-                <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span> aside1</h3>
+                <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span> Peminjaman</h3>
                 <hr/>
-                <h3 class="blue" id="aside2">aside2</h3>
+                <h3 class="blue" id="aside2">Pengembalian</h3>
                 <hr/>
-                <h3 class="blue" id="aside3">aside3</h3>
+                <h3 class="blue" id="aside3">Perpanjangan</h3>
                 <hr/>
-                <h3 class="blue" id="aside4">aside4</h3>
+                <h3 class="blue" id="aside4">Daftar komik</h3>
+                <hr/>
+                <h3 class="blue" id="aside4">Tambah member</h3>
+                <hr/>
+                <h3 class="blue" id="aside4">Daftar member</h3>
                 <hr/>
             </div>
         </div>
         <div id="konten">
-            <h1>Judul</h1>
+            <h1>Peminjaman</h1>
+            <div>
+                <form action="">
+                    <div>
+                        <input type="text">
+                        <input type="text">
+                    </div>
+                    <div>
+                        <input type="text" name="" id="">
+                        <input type="submit">
+                    </div>
+                </form>
+            </div>
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
