user - detail komik
sudah ada versi smartphone
sudah ada dokumentasi
sepertinya sudah fix

--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -17,9 +17,84 @@
         <p id="tanggal" class="blue font15">tanggal</p>
     </header>
     <article>
-        <div id="konten">
-            <h1>Judul</h1>
+        <h1>Hai, MIIKO! Vol.19</h1> <!-- Judulnya -->
+        <br>
+        <div id="gambarKomik"> <!-- div utk fotonya -->
+            <img src="miiko19.jpg"/>
         </div>
+        <div id="istimewa"> <!-- apakah komik favorit atau special edition -->
+            <h3 id="popular" style="color:red;"><i class="fas fa-heart"></i> Popular</h3>
+            <h3 id="specialEdition" style="color:orange;"><i class="fas fa-chess-queen"></i> Special Edition</h3>
+        </div>
+        <div id="keteranganKomik" class="font15"> <!-- info lengkap ttg komik -->
+            <table>
+                <tr>
+                    <td>ID Buku</td>
+                    <td id="idBuku">: 972763</td>
+                </tr>
+                <tr>
+                    <td>Penulis</td>
+                    <td id="penulis">: Masashi</td>
+                </tr>
+                <tr>
+                    <td>Penerbit</td>
+                    <td id="penerbit">: Elex Media</td>
+                </tr>
+                <tr>
+                    <td>Tanggal terbit</td>
+                    <td id="tanggalTerbit">: 4 Mei 2007</td>
+                </tr>
+                <tr>
+                    <td>Jml Halaman</td>
+                    <td id="jumlahHalaman">: 56</td>
+                </tr>
+                <tr>
+                    <td>Berat Buku</td>
+                    <td id="beratBuku">: 500gr</td>
+                </tr>
+                <tr>
+                    <td>Jenis Cover</td>
+                    <td id="jenisCover">: Soft Cover</td>
+                </tr>
+                <tr>
+                    <td>Dimensi</td>
+                    <td id="dimensi">: 8x15 cm</td>
+                </tr>
+                <tr>
+                    <td>Text</td>
+                    <td id="text">: Bahasa Indonesia</td>
+                </tr>         
+                <tr>
+                    <td>Stok</td>
+                    <td id="stok">: 2</td>
+                </tr>
+                <tr>
+                    <td>Tersedia</td>
+                    <td id="tersedia">: 2</td>
+                    <td id="statusKomik">(Available)</td>
+                </tr>
+                <tr>
+                    <td>Dipinjam</td>
+                    <td id="dipinjam">: 2023 kali</td>
+                </tr>
+            </table>
+        </div>
+        
+        <div id="sinopsis">
+            <h4>Sinopsis :</h4>
+            <p id="isiSinopsis">
+                    Hai, Miiko! (juga dikenal sebagai Kocchi Muite! Miiko) adalah manga seri karya seorang mangaka Jepang, Ono Eriko.
+                    Menceritakan tentang gadis kelas 5 SD bernama Yamada Miiko beserta dengan teman-temannya.
+                    Di Inggris manga ini dikenal dengan nama Hi, Michelle!.
+                    Terdapat versi terdahulu dari Hai, Miiko! yang berudul Namaku Miiko! berjumlah 4 jilid.
+                    Seri ini menceritakan tentang Miiko dan kawan-kawan saat kelas 4 SD menjelang kenaikan kelas.
+                    Saat ini manga Hai, Miiko! sudah mencapai jilid 29, menceritakan Miiko dan kawan-kawan yang telah naik kelas ke kelas 6 SD.
+                    Miiko dikenal sangat Aktif dan Ceria. karena itu Tappei dan Yoshida menyukai Miiko.
+                    Miiko sangat ingin bertambah tinggi lantaran Tappei sering mengejek Miiko kecil karena tingginya hanya 122 cm.
+                    Walaupun Tappei sering mengejek Miiko, tappei sering membantu dan menghibur Miiko saat terkena masalah.
+            </p>
+        </div>
+
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
 </body>
