manager - daftar peminjaman
penambahan tabel
belum fix, belum bisa memasukkan nama orang yang namanya panjang

--- a/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
+++ b/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
@@ -44,6 +44,37 @@
                     <i class="fa fa-search blue font15"></i>
                 </div>
             </div>
+            <!--bagian daftar peminjaman-->
+            <div id="tabel">
+                <table>
+                    <thead>
+                        <th id="tanggalPengembalian">Tanggal Pengembalian</th>
+                        <th id="idMember">ID Member</th>
+                        <th id="namaMember">Nama Member</th>
+                        <th class="peringatan"></th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2343</td>
+                            <td>sad</td>
+                            <td>sdad</td>
+                            <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
+                        </tr>
+                        <tr>
+                            <td>2343</td>
+                            <td>sad</td>
+                            <td>sdad</td>
+                            <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
+                        </tr>
+                        <tr>
+                            <td>234e</td>
+                            <td>sads</td>
+                            <td>sdas</td>
+                            <td class="peringatan"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
