manager - daftar peminjaman
perbaikan utk mengantisipasi data yg sangat panjang

--- a/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
+++ b/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
@@ -48,28 +48,28 @@
             <div id="tabel">
                 <table>
                     <thead>
-                        <th id="tanggalPengembalian">Tanggal Pengembalian</th>
-                        <th id="idMember">ID Member</th>
-                        <th id="namaMember">Nama Member</th>
+                        <th class="tanggalPengembalian">Tanggal Pengembalian</th>
+                        <th class="idMember">ID Member</th>
+                        <th class="namaMember">Nama Member</th>
                         <th class="peringatan"></th>
                     </thead>
                     <tbody>
                         <tr>
                             <td>2343</td>
-                            <td>sad</td>
-                            <td>sdad</td>
+                            <td>idid</td>
+                            <td>nama coba</td>
                             <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
                         </tr>
                         <tr>
                             <td>2343</td>
-                            <td>sad</td>
-                            <td>sdad</td>
+                            <td>idid2</td>
+                            <td>nama coba2</td>
                             <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
                         </tr>
                         <tr>
                             <td>234e</td>
-                            <td>sads</td>
-                            <td>sdas</td>
+                            <td>idid3</td>
+                            <td>nama coba3</td>
                             <td class="peringatan"></td>
                         </tr>
                     </tbody>
