--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <i class="fas fa-chevron-left blue" id="tombolBack"></i>
         <img src="../../logobaru.png" id="logo"/>
         <p class="blue font15" id="welcome">Welcome, <span id="namaUser">our customer</span> | <span id="logOut">Log Out</span></p>
         <p id="tanggal" class="blue font15">tanggal</p>
