--- a/Manager/Manager - Detail Peminjaman/Manager - detail peminjaman.html
+++ b/Manager/Manager - Detail Peminjaman/Manager - detail peminjaman.html
@@ -34,7 +34,7 @@
         
         <div id="konten">
             <h1>Detail Peminjaman</h1>
-            <table>
+            <table id="dataMember">
                 <tr>
                     <td class="tableIcon"><i class="fas fa-id-card"></i></td>
                     <td class="tableAtribut"> ID Member </td>
@@ -60,7 +60,45 @@
                     <td class="tableAtribut"> E-mail </td>
                     <td class="tableValue">: email@gmail.com</td>
                 </tr>
+                <tr>
+                    <td class="tableIcon" style="padding-top:25px;"><i class="fas fa-book"></i></td>
+                    <td class="tableAtribut" colspan="2" style="padding-top:25px;"> Daftar komik yang masih dipinjam :</td>
+                </tr>
             </table>
+            <div id="daftarKomik">
+                <table id="tabelDaftarKomik">
+                    <thead>
+                        <th class="idBuku">ID Buku</th>
+                        <th class="judulBuku">Judul</th>
+                        <th class="tanggalPinjam">Tanggal Pinjam</th>
+                        <th class="tanggalPengembalian">Tanggal Pengembalian</th>
+                        <th class="peringatan"></th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>123</td>
+                            <td>ini judulnya</td>
+                            <td>01/01/2010</td>
+                            <td>08/01/2010</td>
+                            <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
+                        </tr>
+                        <tr>
+                            <td>123</td>
+                            <td>ini judulnya 2</td>
+                            <td>02/01/2010</td>
+                            <td>09/01/2010</td>
+                            <td class="peringatan"><i class="fas fa-exclamation-triangle" style="color:red"></i></td>
+                        </tr>
+                        <tr>
+                            <td>123</td>
+                            <td>ini judulnya 3</td>
+                            <td>30/01/2010</td>
+                            <td>06/02/2010</td>
+                            <td class="peringatan"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
