User - detail komik
penambahan rak

--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -78,6 +78,10 @@
                     <td>Dipinjam</td>
                     <td id="dipinjam">: 2023 kali</td>
                 </tr>
+                <tr>
+                    <td>Rak</td>
+                    <td id="rak">: A1</td>
+                </tr>
             </table>
         </div>
         
