user - detail komik
disesuaikan dg laporan

--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -27,8 +27,12 @@
             <h3 id="popular" style="color:red;"><i class="fas fa-heart"></i> Popular</h3>
             <h3 id="specialEdition" style="color:orange;"><i class="fas fa-chess-queen"></i> Special Edition</h3>
         </div>
+        <div id="sewa">
+            <h3>Harga sewa : Rp <span id="hargaSewa">1500</span></h3>
+            <h3>Lama sewa : <span id="lamaSewa"> 7 </span> hari</h3>
+        </div>
         <div id="keteranganKomik" class="font15"> <!-- info lengkap ttg komik -->
-            <table>
+            <table id="kiri">
                 <tr>
                     <td>ID Buku</td>
                     <td id="idBuku">: 972763</td>
@@ -77,6 +81,17 @@
                 <tr>
                     <td>Dipinjam</td>
                     <td id="dipinjam">: 2023 kali</td>
+                </tr>
+                
+            </table>
+            <table id="kanan">
+                <tr>
+                    <td>Genre</td>
+                    <td id="genre">: Action</td>
+                </tr>
+                <tr>
+                    <td>Rating</td>
+                    <td id="rating">: Semua umur</td>
                 </tr>
                 <tr>
                     <td>Rak</td>
