kasir - tambah member
penambahan dokumentasi saja

--- a/kasir/Kasir - tambah member/Kasir - tambah member.html
+++ b/kasir/Kasir - tambah member/Kasir - tambah member.html
@@ -38,6 +38,7 @@
 
         <div id="konten">
             <h1>Tambah Member</h1>
+            <!--form utk tambah member-->
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
