--- a/kasir/Kasir - tambah member/Kasir - tambah member.html
+++ b/kasir/Kasir - tambah member/Kasir - tambah member.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kasir - Daftar Member</title>
+    <title>Kasir - Tambah Member</title>
     <link href="kasirtambahmember.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="kasirtambahmember.js"></script>
