revisi di manager
revisi di manager

--- a/Manager/Manager - Laporan Keuangan/Manager - laporan keuangan.html
+++ b/Manager/Manager - Laporan Keuangan/Manager - laporan keuangan.html
@@ -59,18 +59,18 @@
                             <td class="idMember">123</td>
                             <td class="idKaryawan">456</td>
                             <td class="idBuku">AB123</td>
-                            <td class="harga">3000</td>
-                            <td class="denda"></td>
-                            <td class="subTotal">3000</td>
+                            <td class="harga">Rp 3000</td>
+                            <td class="denda">Rp 0</td>
+                            <td class="subTotal">Rp 3000</td>
                         </tr>
                         <tr>
                             <td colspan="7">TOTAL</td>
-                            <td id="total">3000</td>
+                            <td id="total">Rp 3000</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <button id="print">PRINT</button>
+            <input type="button" id="print" name="print" value="PRINT"/>
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
