penambahan css utk standarisasi
penambahan css utk standarisasi

--- a/kasir/Kasir - daftar member/Kasir - daftar member.html
+++ b/kasir/Kasir - daftar member/Kasir - daftar member.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kasir - Daftar Member</title>
     <link href="kasirdaftarmember.css" type="text/css" rel="stylesheet">
+    <link href="../KasirDefault.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="kasirdaftarmember.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
