--- a/kasir/Kasir - tambah member/Kasir - tambah member.html
+++ b/kasir/Kasir - tambah member/Kasir - tambah member.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kasir - Tambah Member</title>
     <link href="kasirtambahmember.css" type="text/css" rel="stylesheet">
+    <link href="../KasirDefault.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="kasirtambahmember.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
@@ -79,7 +80,7 @@
                 </div>
             </div>
             <!--nanti ganti submit-->
-            <input type="button" id="tombolOk" name="tombolOk" value="OK">
+            <input type="button" id="tombolOk" name="tombolOk" class="tombol" value="OK">
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
