buat css default utk manager
buat css default utk manager

--- a/Manager/Manager - Detail Peminjaman/Manager - detail peminjaman.html
+++ b/Manager/Manager - Detail Peminjaman/Manager - detail peminjaman.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Manager - Detail Peminjaman</title>
+    <link href="../ManagerDefault.css" type="text/css" rel="stylesheet">
     <link href="managerdetailpeminjaman.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="managerdetailpeminjaman.js"></script>
