--- a/Manager/Manager - Laporan Keuangan/Manager - laporan keuangan.html
+++ b/Manager/Manager - Laporan Keuangan/Manager - laporan keuangan.html
@@ -25,8 +25,9 @@
             </div>
             <div id="option">
                 <h3 class="blue" id="aside1"> Daftar Peminjaman</h3>
+                <h3 class="blue" id="aside2"> <span><pre>   </pre></span> Detail Peminjaman</h3>
                 <hr/>
-                <h3 class="blue" id="aside2"><span><i class="fas fa-angle-right"></i></span>Laporan Keuangan</h3>
+                <h3 class="blue" id="aside3"><span><i class="fas fa-angle-right"></i></span>Laporan Keuangan</h3>
                 <hr/>
             </div>
         </div>
