--- a/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
+++ b/Manager/Manager - Daftar Peminjaman/Manager - daftar peminjaman.html
@@ -25,8 +25,9 @@
             </div>
             <div id="option">
                 <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span>Daftar Peminjaman</h3>
+                <h3 class="blue" id="aside2"> <span><pre>   </pre></span> Detail Peminjaman</h3>
                 <hr/>
-                <h3 class="blue" id="aside2">Laporan Keuangan</h3>
+                <h3 class="blue" id="aside3">Laporan Keuangan</h3>
                 <hr/>
             </div>
         </div>
