pengubahan edit jabatan menjadi daftar jabatan

--- a/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.html
+++ b/HRD/HRD - Daftar Jabatan/HRD - Daftar Jabatan.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HRD - Edit Jabatan</title>
-    <link href="HRD - Edit Jabatan.css" type="text/css" rel="stylesheet">
+    <title>HRD - Daftar Jabatan</title>
+    <link href="HRD - Daftar Jabatan.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="HRD - Edit Jabatan.js"></script>
+    <script src="HRD - Daftar Jabatan.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -24,26 +24,28 @@
             </div>
             <div id="option">
                 <h3 class="blue" id="aside1">Daftar Karyawan</h3>
-                <h3 class="blue" id="aside2"> <pre>   </pre><i class="fas fa-angle-right"></i></span>Data Karyawan</h3>
-                <h3 class="blue" id="aside3"> <pre>   </pre><i class="fas fa-angle-right"></i></span>Edit Data Karyawan</h3>
+                <h3 class="blue" id="aside2"> <pre>   </pre>Data Karyawan</h3>
+                <h3 class="blue" id="aside3"> <pre>   </pre>Edit Data Karyawan</h3>
                 <hr/>
                 <h3 class="blue" id="aside4">Tambah Karyawan</h3>
                 <hr/>
-                <h3 class="blue" id="aside5"> <span><i class="fas fa-angle-right"></i></span>Edit Jabatan</h3>
+                <h3 class="blue" id="aside5"> <span><i class="fas fa-angle-right"></i></span> Daftar Jabatan</h3>
                 <hr/>
                 <h3 class="blue" id="aside6">Tambah Jabatan</h3>
                 <hr/>
             </div>
         </div>
         <div id="konten">
-            <h1>Edit Jabatan</h1>
+            <h1>Daftar Jabatan</h1>
 
             <div id="sorting">
                 <label id="labelSortBy" class="blue font15">Order by :</label>
                 <br/>
                 <select id="selectSortBy" class="font15">
-                    <option>Asc</option>
-                    <option>Dsc</option>
+                    <option>ID Jabatan</option>
+                    <option>Nama Jabatan</option>
+                    <option>Gaji tertinggi</option>
+                    <option>Gaji terendah</option>
                 </select>
             </div>
 
@@ -51,8 +53,8 @@
                 <label id="labelSearchBy" class="blue font15">Search by :</label>
                 <br/>
                 <select id="selectSearchBy" class="font15">
+                    <option>Nama Jabatan</option>
                     <option>ID Jabatan</option>
-                    <option>Jabatan</option>
                 </select>
                 <div id="searchBox">
                     <input type="text"  placeholder="Search" class="font15" id="inputSearchBy" name="inputSearchBy"/>
