--- a/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
+++ b/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
@@ -29,7 +29,7 @@
                 <hr/>
                 <h3 class="blue" id="aside4"> <span><i class="fas fa-angle-right"></i></span>Tambah Karyawan</h3>
                 <hr/>
-                <h3 class="blue" id="aside5">Edit Jabatan</h3>
+                <h3 class="blue" id="aside5">Daftar Jabatan</h3>
                 <hr/>
                 <h3 class="blue" id="aside6">Tambah Jabatan</h3>
                 <hr/>
