--- a/HRD/HRD - Tambah Jabatan/HRD - Tambah Jabatan.html
+++ b/HRD/HRD - Tambah Jabatan/HRD - Tambah Jabatan.html
@@ -30,7 +30,7 @@
                 <hr/>
                 <h3 class="blue" id="aside4">Tambah Karyawan</h3>
                 <hr/>
-                <h3 class="blue" id="aside5">Edit Jabatan</h3>
+                <h3 class="blue" id="aside5">Daftar Jabatan</h3>
                 <hr/>
                 <h3 class="blue" id="aside6"> <span><i class="fas fa-angle-right"></i></span> Tambah Jabatan</h3>
                 <hr/>
