--- a/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
+++ b/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
@@ -38,7 +38,39 @@
         <div id="konten">
             <h1>Tambah Karyawan</h1>
             
-            
+            <div id="dataKaryawan" class="font15">
+                <div class="detailKaryawan">
+                    <div class="kanan">
+                        <button type="button" class="tombol" name="tombolUpload"><i class="fas fa-upload"></i>Upload</button>
+                        <span class="peraturan"><i>Format : PNG, JPG, JPEG.</i></span><br><br>
+                        <img class="photo" src="profile_pic.jpg"/><br><br><br><br><br>
+                        <!-- tombol save -->
+                        <input type="button" id="tombolSave" name="tombokSave" class="tombol" value="SAVE"/>
+                    </div>
+                    <div class="kiri">
+                        <div id="inputan">
+                            <label>ID</label>
+                            <input type="text" id="idKaryawan" name="idKaryawan"/>
+                            <br/><br/>
+                            <label>Nama</label>
+                            <input type="text" id="namaKaryawan" name="namaKaryawan"/>
+                            <br/><br/>
+                            <label>Jabatan</label>
+                            <input type="text" id="jabatan" name="jabatan"/>
+                            <br/><br/>
+                            <label>Email</label>
+                            <input type="text" id="email" name="email"/>
+                            <br/><br/>
+                            <label>No. Telp</label>
+                            <input type="text" id="telepon" name="telepon"/>
+                            <br/><br/>
+                            <div id="divAl"><label>Alamat</label></div>
+                            <textarea id="alamat" name="alamat"></textarea>
+                            <br/><br/>
+                        </div>  
+                    </div>
+                </div>
+            </div>
         </div>
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
