--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>User - Detail Komik</title>
+    <link href="../UserDefault.css" type="text/css" rel="stylesheet">
     <link href="userdetailkomik.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="userdetailkomik.js"></script>
@@ -19,7 +20,6 @@
     </header>
     <article>
         <h1>Hai, MIIKO! Vol.19</h1> <!-- Judulnya -->
-        <br>
         <div id="gambarKomik"> <!-- div utk fotonya -->
             <img src="miiko19.jpg"/>
         </div>
