pembenaran css supaya lebih pas di layar

--- a/HRD/HRD - Daftar Karyawan/HRD - Daftar Karyawan.html
+++ b/HRD/HRD - Daftar Karyawan/HRD - Daftar Karyawan.html
@@ -23,9 +23,9 @@
                 <hr/>
             </div>
             <div id="option">
-                <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span>Daftar Karyawan</h3>
-                <h3 class="blue" id="aside2"> <pre>   </pre><i class="fas fa-angle-right"></i></span>Data Karyawan</h3>
-                <h3 class="blue" id="aside3"> <pre>   </pre><i class="fas fa-angle-right"></i></span>Edit Data Karyawan</h3>
+                <h3 class="blue" id="aside1"> <span><i class="fas fa-angle-right"></i></span> Daftar Karyawan</h3>
+                <h3 class="blue" id="aside2"> <pre>   </pre>Data Karyawan</h3>
+                <h3 class="blue" id="aside3"> <pre>   </pre>Edit Data Karyawan</h3>
                 <hr/>
                 <h3 class="blue" id="aside4">Tambah Karyawan</h3>
                 <hr/>
