--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -8,7 +8,7 @@
     <link href="../UserDefault.css" type="text/css" rel="stylesheet">
     <link href="userdetailkomik.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="userdetailkomik.js"></script>
+    <script src="../UserDefault.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 </head>
 <body>
