HRD sudah diphp
Kurang Edit sama Detail Karyawan

--- a/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
+++ b/HRD/HRD - Tambah Karyawan/HRD - Tambah Karyawan.html
@@ -64,8 +64,8 @@
                             <label>No. Telp</label>
                             <input type="text" id="telepon" name="telepon"/>
                             <br/><br/>
-                            <div id="divAl"><label>Alamat</label></div>
-                            <textarea id="alamat" name="alamat"></textarea>
+                            <label>Alamat</label>
+                            <input type="text" id="alamat" name="alamat"/>
                             <br/><br/>
                         </div>  
                     </div>
