user - detail komik
sudah bisa pop up dan versi hp juga

--- a/User/User - Detail Komik/User - detail komik.html
+++ b/User/User - Detail Komik/User - detail komik.html
@@ -18,7 +18,7 @@
         <p class="blue font15" id="welcome">Welcome, <span id="namaUser">our customer</span> | <span id="logOut">Log Out</span></p>
         <p id="tanggal" class="blue font15">tanggal</p>
     </header>
-    <article onclick="munculPopup($(this))">
+    <article>
         <h1>Hai, MIIKO! Vol.19</h1> <!-- Judulnya -->
         <div id="gambarKomik"> <!-- div utk fotonya -->
             <img src="miiko19.jpg"/>
@@ -117,11 +117,5 @@
 
     </article>
     <a href="#logo" id="tombolUp"><i class="fas fa-chevron-circle-up blue"></i></a>
-    <div id="blur" onclick="pencetBlur()">
-    </div>
-    <div id="popup">
-        <i class="fas fa-times simbolX" onclick="pencetBlur()"></i>
-        <br/><br/>
-    </div>
 </body>
 </html>
