--- a/Gudang/Gudang - Tambah Komik/tambahKomik.html
+++ b/Gudang/Gudang - Tambah Komik/tambahKomik.html
@@ -29,7 +29,10 @@
         <label>Jumlah Halaman</label><br/>
         <input type="text" id="jumlahHalaman" name="jumlahHalaman"/><br/>
 
-        <label>Berat Buku</label><br/>
+        <label>Jumlah Eksemplar</label><br/>
+        <input type="text" id="jumlaEksemplar" name="jumlahEksemplar"/><br/>
+
+        <label>Berat Komik</label><br/>
         <input type="text" id="beratBuku" name="beratBuku"/><br/>
 
         <label>Jenis Cover</label><br/>
