--- a/Gudang/Gudang - Tambah Pengarang/tambahPengarang.html
+++ b/Gudang/Gudang - Tambah Pengarang/tambahPengarang.html
@@ -11,7 +11,7 @@
     </div>
 
     <div id="kanan">
-        <label>Nama Penngaran</label><br/>
+        <label>Nama Pengarang</label><br/>
         <input type="text" id="namaPenerbit" name="namaPenerbit"/><br/> 
 
         <label>Asal</label><br/>
