--- a/Gudang/Gudang - Tambah Supplier/tambahSupplier.html
+++ b/Gudang/Gudang - Tambah Supplier/tambahSupplier.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+    article div#konten{
+        overflow-y: hidden;
+    }
+</style>
 <div id="judul">
     <h1>Tambah Supplier</h1>
 </div>
