--- a/Gudang/Gudang-TambahEksemplar/tambahEksemplar.html
+++ b/Gudang/Gudang-TambahEksemplar/tambahEksemplar.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+    article div#konten{
+        overflow-y: hidden;
+    }
+</style>
 <title>Gudang - Tambah Pengarang</title>
 <div id="judul">
     <h1>Tambah Eksemplar</h1>
