Nama folder & file

--- a/Gudang/gudangDetailKomik/detailKomik.html
+++ b/Gudang/gudangDetailKomik/detailKomik.html
@@ -1,4 +1,4 @@
-<i class="fas fa-chevron-left blue" id="tombolBack" onclick="back()"></i>
+<i class="fas fa-chevron-left blue" id="tombolBack" onclick="aside1()"></i>
 <h1>Hai, MIIKO! Vol.19</h1> <!-- Judulnya -->
 <div id="gambarKomik"> <!-- div utk fotonya -->
     <img src="miiko19.jpg"/>
